Fix overflow bug

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
-    font-family: sans-serif; 
+    font-family: sans-serif;
+    overflow-wrap: break-word;
 }
 
 #title {
